--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <table class="grid">
+  <h2 class="winner"></h2>
+  <table class="grid" id="main">
     <tr>
       <td class="cell" id="0"></td>
       <td class="cell" id="1"></td>
@@ -24,19 +25,14 @@
     <tr>
       <td class="cell" id="6"></td>
       <td class="cell" id="7"></td>
-      <td class="cell" id="8 "></td>
+      <td class="cell" id="8"></td>
     </tr>
   </table>
-  <div>
-    <div class="endgame">
+    <!-- <div class="endgame">
       <div class="text"></div>
     </div>
+      <button class= onclick="startGame()">Replay</button> -->
 
-    <!-- <div>
-      <button class= onclick="startGame()">Replay</button>
-    </div> -->
-
-  </div>
 
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
