--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <h2 class="winner"></h2>
+  
+
+  <h3 class="winner"></h2>
   <table class="grid" id="main">
     <tr>
       <td class="cell" id="0"></td>
@@ -28,11 +30,10 @@
       <td class="cell" id="8"></td>
     </tr>
   </table>
-    <!-- <div class="endgame">
+    <div class="endgame">
       <div class="text"></div>
     </div>
-      <button class= onclick="startGame()">Replay</button> -->
-
+      <button class="reset" onclick="reset()">Reset</button>
 
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
