--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+
 
   <h3 class="winner"></h2>
   <table class="grid" id="main">
@@ -30,10 +30,10 @@
       <td class="cell" id="8"></td>
     </tr>
   </table>
-    <div class="endgame">
+    <!-- <div class="endgame">
       <div class="text"></div>
     </div>
-      <button class="reset" onclick="reset()">Reset</button>
+      <button class="reset" onclick="reset()">Reset</button> -->
 
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
