--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe </title>
-  <h1>Tic-Tac-Toe Game</h1>
 </head>
 
 <body>
-
-
-  <h3 class="winner"></h2>
+  <h1>Tic-Tac-Toe Game</h1>
+  <h3 class="winner"></h3>
   <table class="grid" id="main">
     <tr>
       <td class="cell" id="0"></td>
@@ -30,10 +28,10 @@
       <td class="cell" id="8"></td>
     </tr>
   </table>
-    <!-- <div class="endgame">
+    <div class="endgame">
       <div class="text"></div>
     </div>
-      <button class="reset" onclick="reset()">Reset</button> -->
+      <button class="reset" onclick="reset()">Reset</button>
 
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
